--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* GLOBALS */
 :root {
     --inc_color1: #F4B845;
+    --inc_color2: #DAA520;
     --brown_text: #312205;
 }
 
@@ -622,6 +623,29 @@
 
 
 
+.home_video {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+    margin: 2%;
+}
+
+.home_video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 3rem;
+
+}
+
+
+
+
+
+
 
 
 
@@ -733,36 +757,41 @@
 
 .home_contact_form_container {
     width: 90%;
+    border-radius: 1.5rem;
+    box-shadow: -20px 18px 11px 2px #7d7d7d;
 }
 
-.contact_form{
+.contact_form {
     width: 100%;
     height: 100%;
-    background-color:#1A1A1A;
+    background-color: #1A1A1A;
     border-radius: 1.5rem;
     padding: 8% 3%;
     border: 5px solid var(--inc_color1);
     clip-path: polygon(100% 25%, 100% 100%, 0% 100%, 0% 0%, 75% 0%);
-    
+
 }
-.contact_form h2{
+
+.contact_form h2 {
     color: #ffffff;
     font-weight: 700;
     text-shadow: 2px 2px 0px #A67923;
     margin-top: 6%;
     margin-bottom: 8%;
 }
-.contact_form p{
-    color:#7A7A7A;
+
+.contact_form p {
+    color: #7A7A7A;
     margin-bottom: 8%;
 }
 
-.cfif{
+.cfif {
     width: 100%;
     height: max-content;
     display: flex;
 }
-.cfif input{
+
+.cfif input {
     width: 100%;
     padding: 2%;
     margin: 0.5%;
@@ -770,7 +799,7 @@
     outline: none;
 }
 
-.contact_form textarea{
+.contact_form textarea {
     width: 99%;
     border: none;
     outline: none;
@@ -778,7 +807,8 @@
     padding: 2%;
 
 }
-.contact_form button{
+
+.contact_form button {
     width: 100%;
     padding: 1%;
     border-radius: 2rem;
@@ -786,6 +816,78 @@
     border: none;
     outline: none;
     font-weight: 700;
+}
+
+
+.contact_details_bar {
+    width: 100%;
+    height: max-content;
+}
+
+.contact_details_polygon {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(85% 0%, 100% 100%, 0% 100%, 0% 0%);
+    background-color: var(--inc_color2);
+    display: flex;
+    align-items: end;
+    justify-content: flex-start;
+}
+
+.contact_details_polygon_b {
+    width: 99.6%;
+    height: 98%;
+    clip-path: polygon(85% 0%, 100% 100%, 0% 100%, 0% 0%);
+    background-color: #ffffff;
+}
+
+.contact_detail_row {
+    width: 90%;
+    height: 100%;
+    padding-top: 6%;
+    padding-bottom: 3%;
+    padding-left: 2%;
+}
+
+.contact_detail {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.contact_detail i {
+    font-size: 300%;
+    padding: 6%;
+}
+
+.contact_detail h4 {
+    color: var(--inc_color2);
+    font-size: 150%;
+}
+
+.contact_detail a {
+    text-decoration: none;
+    color: #000;
+    font-size: 80%;
+}
+
+.contact_detail_content {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact_dubai_logos {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.contact_dubai_logos img {
+    width: 30%;
 }
 
 
@@ -807,6 +909,62 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/Rectangle\ 360.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.footer_logo_container {
+    width: 100%;
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.footer_logo_container img {
+    width: 80%;
+    height: auto;
+}
+
+.footer_logo_container p {
+    padding: 4%;
+    color: #fff;
+    text-align: justify;
+}
+
+
+
+.footer_link_heading {
+    color: #ffffff;
+    width: 100%;
+    border-bottom: 1px solid var(--inc_color2);
+    padding-top: 15%;
+}
 
 
 
