--- a/css/style.css
+++ b/css/style.css
@@ -1572,7 +1572,18 @@ p {
     height: max-content;
 }
 
+.why_us_head h2{
+    color: var(--inc_color2);
+}
 
+.why_us_card{
+    width: 100%;
+    height: 100%;
+}
+.why_us_card img{
+    width: 100%;
+    height: 100%;
+}
 
 
 
@@ -1585,7 +1596,7 @@ p {
 
 
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     font-family: "Poppins", sans-serif;
 
 }
