--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     --brown_text: #312205;
 }
 
+
+html{
+ scroll-behavior: smooth;
+}
 .body {
     margin: 0;
     padding: 0;
@@ -244,6 +248,7 @@
 
 
 
+/* *****************************                       HOME PAGE CSS           ****************************/
 
 
 /* HERO SECTION */
@@ -295,7 +300,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    box-shadow: 4px 10px 15px 0px #a7a7a7;
+    box-shadow: 5px 6px 20px 0px #000000;
+    ;
     ;
 
 }
@@ -951,15 +957,14 @@
     padding-bottom: 56.25%;
     /* 16:9 */
     height: 0;
-    margin: 2%;
+    margin: 0%;
 }
 
 .home_video iframe {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+
     border-radius: 3rem;
 
 }
@@ -1317,7 +1322,7 @@ footer {
 
 
 
-/* *****************************ABOUT PAGE CSS */
+/* *****************************                       ABOUT PAGE CSS           ****************************/
 .about_hero-content {
     position: relative;
 }
@@ -1357,7 +1362,7 @@ footer {
     margin-bottom: 20px;
     color: var(--brown_text);
     line-height: 150%;
-
+    padding-left: 0%;
 }
 
 .about_hero_bottom_strip {
@@ -1572,23 +1577,186 @@ p {
     height: max-content;
 }
 
-.why_us_head h2{
+.why_us_head {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.why_us_head h2 {
+    font-size: 300%;
     color: var(--inc_color2);
+    padding: 4%;
+    border-bottom: 2px solid var(--inc_color2);
 }
 
-.why_us_card{
+.whyUsStrip {
+    width: 2px;
+    height: 80%;
+    background-color: var(--inc_color2);
+}
+
+.why_us_card_wrap {
+    width: 100%;
+    height: 100%;
+    background-color: var(--inc_color2);
+    clip-path: polygon(10% 0%, 100% 0%, 100% 80%, 90% 100%, 0% 100%, 0% 20%);
+}
+
+.why_us_card {
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    clip-path: polygon(11% 1%, 99% 1%, 99% 79%, 89% 99%, 1% 99%, 1% 21%);
+    margin-bottom: 2%;
+    padding: 10%;
+}
+
+.why_us_card h2 {
+    text-align: center;
+    font-weight: 600;
+}
+
+.why_us_card p {
+    text-align: justify;
+    padding: 0;
+}
+
+.why_us_card img {
     width: 100%;
     height: 100%;
 }
-.why_us_card img{
+
+.why_us_card_content_wrap {
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* *****************************                       SERVICE PAGE CSS           ****************************/
+
+.service_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/Rectangle\ 467.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.our_services {
+    width: 100%;
+    height: max-content;
+    padding: 5%;
+    transition: 1s ease;
+}
+
+.service_card_wrapper {
+    width: 100%;
+    height: max-content;
+}
+
+.service_card_container{
+    padding-left: 5% !important;
+    padding-right: 5% !important;
+    margin-bottom: 3%;
+}
+
+.service_card {
+    padding: 5%;
+    width: 100%;
+    height: 100%;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 20px 7px #979797;
+    border: 4px solid #fff;
+    cursor: pointer;
+}
+
+.service_card_contentWrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 10% !important;
+    padding-bottom: 10% !important;
+}
+
+.service_card_contentWrap img {
+    width: 40%;
+}
+
+.service_card_contentWrap h5{
+    font-weight: bold;
+    text-align: center;
+}
+.service_card_contentWrap p{
+    padding: 0;
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.service_card:hover .service_card_contentWrap p {
+    opacity: 1;
+    visibility: visible;
+    color: #000;
+}
+
+.service_card:hover.service_card {
+    border: 4px solid var(--inc_color1);
+    transition: 0.5s ease;
+}
+
+.service_card p{
+    text-align: right;
+    color: var(--inc_color2);
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .service_card p{
+        text-align: center;
+    }
+    .service_card_contentWrap img {
+        width: 70%;
+    }
+    .service_card_wrapper {
+        width: 100%;
+        height: max-content;
+        display: flex;
+        justify-content: center;
+    }
+}
 
 
 
