--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@
 }
 
 
-html{
- scroll-behavior: smooth;
+html {
+    scroll-behavior: smooth;
 }
+
 .body {
     margin: 0;
     padding: 0;
@@ -1041,6 +1042,8 @@ html{
     margin-bottom: 8%;
 }
 
+
+
 .cfif {
     width: 100%;
     height: max-content;
@@ -1685,7 +1688,7 @@ p {
     height: max-content;
 }
 
-.service_card_container{
+.service_card_container {
     padding-left: 5% !important;
     padding-right: 5% !important;
     margin-bottom: 3%;
@@ -1714,11 +1717,12 @@ p {
     width: 40%;
 }
 
-.service_card_contentWrap h5{
+.service_card_contentWrap h5 {
     font-weight: bold;
     text-align: center;
 }
-.service_card_contentWrap p{
+
+.service_card_contentWrap p {
     padding: 0;
     text-align: center;
     opacity: 0;
@@ -1737,19 +1741,21 @@ p {
     transition: 0.5s ease;
 }
 
-.service_card p{
+.service_card p {
     text-align: right;
     color: var(--inc_color2);
     cursor: pointer;
 }
 
 @media (max-width: 768px) {
-    .service_card p{
+    .service_card p {
         text-align: center;
     }
+
     .service_card_contentWrap img {
         width: 70%;
     }
+
     .service_card_wrapper {
         width: 100%;
         height: max-content;
@@ -1757,6 +1763,136 @@ p {
         justify-content: center;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* *****************************                       CONTACT PAGE CSS           ****************************/
+
+.contact_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/Rectangle\ 468.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.contact_text {
+    width: 100%;
+    height: max-content;
+    padding: 3%;
+}
+
+.contact_text p {
+    width: 60%;
+    text-align: justify;
+}
+
+.contact_bg{
+    background-image: url(../img/Vector\ 26.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.c_contact_form {
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff67;
+    border-radius: 1.5rem;
+    padding: 8% 3%;
+    border: 5px solid var(--inc_color1);
+    clip-path: polygon(100% 25%, 100% 100%, 0% 100%, 0% 0%, 75% 0%);
+
+}
+
+.c_contact_form h6 {
+    color: #000000;
+    margin-bottom: 8%;
+    font-size: 150%;
+}
+
+.c_contact_form h3 {
+    color: #000000;
+    font-weight: 700;
+    font-size: 300%;
+    margin-top: 6%;
+    margin-bottom: 8%;
+}
+
+.c_contact_form textarea {
+    width: 99%;
+    border: none;
+    outline: none;
+    margin: 0.5%;
+    padding: 2%;
+    border: 1px solid var(--inc_color2);
+    outline: 1px solid var(--inc_color2);
+    border-radius: 10px;
+}
+
+.c_contact_form button {
+    width: 100%;
+    padding: 1%;
+    border-radius: 2rem;
+    background-color: var(--inc_color1);
+    border: none;
+    outline: none;
+    font-weight: 700;
+}
+
+.cpif {
+    width: 100%;
+    height: max-content;
+    display: flex;
+    margin-bottom: 8%;
+}
+
+.cpif input {
+    width: 100%;
+    padding: 2%;
+    margin: 0.5%;
+    border: 1px solid var(--inc_color2);
+    outline: 1px solid var(--inc_color2);
+    border-radius: 10px;
+}
+.contact_contact_form_container {
+    width: 90%;
+    border-radius: 1.5rem;
+}
+
+
+
 
 
 
