--- a/css/style.css
+++ b/css/style.css
@@ -1978,7 +1978,7 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 ;
+    padding: 0;
 }
 
 
@@ -2211,6 +2211,26 @@ p {
         overflow: hidden;
     }
 }
+
+.service_sub_paragaphs {
+    width: 100%;
+    height: max-content;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.service_sub_paragaphs h3 {
+    font-weight: bold;
+    margin-bottom: 1%;
+}
+
+.service_sub_paragaphs p {
+    padding: 0;
+    font-weight: 500;
+    margin-bottom: 3%;
+    text-align: justify;
+}
+
 
 
 
