--- a/css/style.css
+++ b/css/style.css
@@ -1945,20 +1945,6 @@ p {
 
 /* *****************************                       SERVICES SUBSIDIARY PAGES CSS           ****************************/
 
-.airfreight_hero {
-    width: 100%;
-    height: max-content;
-
-    background-image: url(../img/airfrieght\ banner.png);
-    background-size: cover;
-    /* Ensures the image covers the entire div */
-    background-position: center;
-    /* Centers the image */
-    background-repeat: no-repeat;
-    /* Prevents the image from repeating */
-    overflow: hidden;
-}
-
 .service_sub_hero {
     padding: 20%;
     position: relative;
@@ -2032,7 +2018,7 @@ p {
 }
 
 .service_sub_strip_item img {
-    width: 15%;
+    width: 20%;
 }
 
 .service_sub_strip_item h6 {
@@ -2068,6 +2054,13 @@ p {
     height: max-content;
     padding: 3%;
     margin-top: 2%;
+}
+
+.service_sub_sec1_para h3 {
+    padding-bottom: 2%;
+    color: #000;
+    text-align: justify;
+    font-weight: bold;
 }
 
 .service_sub_sec1_para p {
@@ -2229,9 +2222,140 @@ p {
         padding: 5%;
         height: max-content;
         top: 0;
-
         border-radius: 2rem;
+    }
 
+    .cont_bg_1{
+        background-image: url(../img/bg445.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_2{
+        background-image: url(../img/Vector\ 45.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_3{
+        background-image: url(../img/Vector\ 44.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_4{
+        background-image: url(../img/Vector\ 46.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_5{
+        background-image: url(../img/Vector\ 47.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_6{
+        background-image: url(../img/Vector\ 73.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_7{
+        background-image: url(../img/Vector\ 62.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_8{
+        background-image: url(../img/bg445.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_9{
+        background-image: url(../img/bg445.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_10{
+        background-image: url(../img/bg445.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_11{
+        background-image: url(../img/bg445.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_12{
+        background-image: url(../img/bg445.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_13{
+        background-image: url(../img/bg445.png);
+        background-size: cover;
+        /* Ensures the image covers the entire div */
+        background-position: center;
+        /* Centers the image */
+        background-repeat: no-repeat;
+        /* Prevents the image from repeating */
+        overflow: hidden;
+    }
+    .cont_bg_14{
         background-image: url(../img/bg445.png);
         background-size: cover;
         /* Ensures the image covers the entire div */
@@ -2248,6 +2372,7 @@ p {
     height: max-content;
     padding-left: 5%;
     padding-right: 5%;
+    margin-top: 2%;
 }
 
 .service_sub_paragaphs h3 {
@@ -2268,8 +2393,115 @@ p {
 
 
 
+
+
+.airfreight_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/airfrieght\ banner.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.seafreight_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/sea\ freight\ banner.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.roadfreight_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/road\ freight\ banner.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.temp_controlled_cargo_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/tempcontrolled\ cargo\ banner.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.cross_trade_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/cross\ trade\ banner.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.corporate_courier_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/corporate\ courier\ banner.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+.far_east_shipment_hero {
+    width: 100%;
+    height: max-content;
+
+    background-image: url(../img/far\ east\ shipment\ banner.png);
+    background-size: cover;
+    /* Ensures the image covers the entire div */
+    background-position: center;
+    /* Centers the image */
+    background-repeat: no-repeat;
+    /* Prevents the image from repeating */
+    overflow: hidden;
+}
+
+
+
+
+
+
+
+
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     font-family: "Poppins", sans-serif;
 
 }
