--- a/css/style.css
+++ b/css/style.css
@@ -2003,7 +2003,7 @@ p {
     width: 80%;
     height: max-content;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: space-around;
 }
 
@@ -2015,6 +2015,7 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .service_sub_strip_item img {
@@ -2042,6 +2043,9 @@ p {
     .service_sub_sec1_col1 img {
         display: none;
     }
+    .service_sub_sec1_strip {
+        width: 100%;
+    }
 }
 
 
@@ -2065,7 +2069,7 @@ p {
 
 .service_sub_sec1_para p {
     padding: 0;
-    font-size: 120%;
+    font-size: 110%;
     color: #000;
     text-align: justify;
     font-weight: 500;
@@ -2074,6 +2078,9 @@ p {
 @media (max-width: 768px) {
     .service_sub_sec1_para {
         padding: 8%;
+    }
+    .service_sub_sec1_para p {
+        font-size: 90%;
     }
 }
 
